updated website so far

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/SebChua/ICON-Website#readme",
   "dependencies": {
-    "@types/jquery": "^3.3.22"
+    "@types/jquery": "^3.3.22",
+    "jquery": "^3.3.1"
   }
 }
